objects/ServiceAccounts__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APIClientId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>APIClientId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APIClientSecret__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>APIClientSecret</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstanceId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>InstanceId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ServiceName</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Username</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ServiceAccounts</label>
</CustomObject>